# detray

./: CMakeLists.txt
.github/workflows/: builds.yml
cmake/: detray-compiler-options-cpp.cmake
tests/: CMakeLists.txt
tests/benchmarks/cpu/: CMakeLists.txt  intersect_all.cpp  intersect_surfaces.cpp  masks.cpp
tests/benchmarks/cuda/: benchmark_propagator_cuda.cpp  benchmark_propagator_cuda_kernel.cu  benchmark_propagator_cuda_kernel.hpp
tests/integration_tests/cpu/: CMakeLists.txt
tests/tracer/: CMakeLists.txt  single_shapes.cpp  test_image.cpp
tests/unit_tests/: CMakeLists.txt
tests/unit_tests/core/: grids_grid2.cpp
tests/unit_tests/cpu/: CMakeLists.txt  check_geometry_navigation.cpp  coordinate_cartesian2.cpp  coordinate_cartesian3.cpp  coordinate_cylindrical2.cpp  coordinate_cylindrical3.cpp  coordinate_line2.cpp  coordinate_polar2.cpp  core_detector.cpp  grid_axis.cpp  grid_grid.cpp  grid_grid_builder.cpp  grid_serializer.cpp  masks_annulus2D.cpp  masks_cylinder.cpp  masks_line.cpp  masks_rectangle2D.cpp  masks_ring2D.cpp  masks_trapezoid2D.cpp  masks_unbounded.cpp  masks_unmasked.cpp  material_maps.cpp  materials.cpp  sf_finder_brute_force.cpp  test_core.cpp  test_telescope_detector.cpp  tools_cylinder_intersection.cpp  tools_helix_intersectors.cpp  tools_intersection_kernel.cpp  tools_line_intersection.cpp  tools_navigator.cpp  tools_planar_intersection.cpp  tools_propagator.cpp  tools_track_generators.cpp
tests/unit_tests/cuda/: mask_store_cuda.cpp  mask_store_cuda_kernel.cu  mask_store_cuda_kernel.hpp
utils/: CMakeLists.txt
(+285 files in other folders)
